--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -1,17 +1,24 @@
-<!doctype html>
-<html>
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>{% block title %}Poll App{% endblock %}</title>
-  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <meta charset="UTF-8">
+    <title>{% block title %}Poll App{% endblock %}</title>
+
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
+
 <body>
-  <nav>
-    <a href="{% url 'home' %}">Home</a> |
-    <a href="{% url 'poll_list' %}">Polls</a>
-  </nav>
-  <main>
-    {% block content %}{% endblock %}
-  </main>
+
+    <nav>
+        <a href="{% url 'home' %}">Home</a> |
+        <a href="{% url 'poll_list' %}">Polls</a>
+    </nav>
+
+    <main>
+        {% block content %}
+        {% endblock %}
+    </main>
+
 </body>
 </html>
