--- a/frontend/templates/polls/poll_detail.html
+++ b/frontend/templates/polls/poll_detail.html
@@ -2,7 +2,7 @@
 {% block content %}
 <h1>{{ poll.question }}</h1>
 <ul>
-  {% for c in poll.choices %}
+  {% for c in poll.choices.all %}
     <li>{{ c }}</li>
   {% endfor %}
 </ul>
