--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -13,6 +13,14 @@
     <nav>
         <a href="{% url 'home' %}">Home</a> |
         <a href="{% url 'poll_list' %}">Polls</a>
+        
+        {% if user.is_authenticated %}
+            | <a href="{% url 'create_poll' %}">Create Poll</a>
+            | <a href="{% url 'logout' %}">Logout ({{ user.username }})</a>
+        {% else %}
+            | <a href="{% url 'login' %}">Login</a>
+            | <a href="{% url 'register' %}">Register</a>
+        {% endif %}
     </nav>
 
     <main>
