--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -16,6 +16,7 @@
         
         {% if user.is_authenticated %}
             | <a href="{% url 'create_poll' %}">Create Poll</a>
+            | <a href="{% url 'my_polls' %}">My Polls</a>
             | <a href="{% url 'logout' %}">Logout ({{ user.username }})</a>
         {% else %}
             | <a href="{% url 'login' %}">Login</a>
@@ -24,6 +25,16 @@
     </nav>
 
     <main>
+        {% if messages %}
+            <div class="messages">
+                {% for message in messages %}
+                    <div class="alert alert-{{ message.tags }}">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            </div>
+        {% endif %}
+        
         {% block content %}
         {% endblock %}
     </main>
