--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -14,10 +14,10 @@
         <a href="{% url 'home' %}">Home</a> |
         <a href="{% url 'poll_list' %}">Polls</a>
         
-        {% if user.is_authenticated %}
+        {% if current_user %}
             | <a href="{% url 'create_poll' %}">Create Poll</a>
             | <a href="{% url 'my_polls' %}">My Polls</a>
-            | <a href="{% url 'logout' %}">Logout ({{ user.username }})</a>
+            | <a href="{% url 'logout' %}">Logout ({{ current_user.username }})</a>
         {% else %}
             | <a href="{% url 'login' %}">Login</a>
             | <a href="{% url 'register' %}">Register</a>
